style.css
* {
  margin: 0;
  padding: 0;
  box-shadow: none;
}
html {
  font-size: 62.5%;
}
/* Heaeder */
.main-head {
  background: url(./images/bgk-header.png);
  background-size: cover;
  background-repeat: no-repeat;
  min-height: 80vh;
  flex-direction: row;
  justify-content: center;
}

.Agency {
  display: flex;
}

.Logoname {
  color: aquamarine;
  opacity: 0.6;
  font-size: 2rem;
  margin-left: 0.5rem;
  margin: 0;
  padding: 0;
  box-shadow: none;
}

html {
  font-size: 62.5%;
}

/* Header */
.main-head {
  background: url(./images/bgk-header.png);
  background-size: cover;
  background-repeat: no-repeat;
  min-height: 60vh;
  flex-direction: row;
  justify-content: center;
}

.Agency {
  display: flex;
  align-content: center;
  justify-content: center;
}


.Logo {
  display: flex;
  flex-direction: row;
  padding-right: 40rem;
}

.Logo-image {
  opacity: 0.6;
  
}

.Logo-name {
  color: aquamarine;
  opacity: 0.6;
  font-size: 2rem;
  margin-left: 1rem;
  margin-top: 1rem;
  font-family: Roboto, sans-serif;
  font-weight: 100;
}

/* Navigation */
.container-navbar {
  display: flex;
  justify-content: center;
  align-content: center;
}

nav {
  margin-left: 5rem;
}

.nav-ul {
  display: flex;
  list-style-type: none;
  display: flex;
  justify-content: space-around;
  align-content: center;
}

nav {
  margin-left: 5rem;
  display: flex;
  align-content: center;
}

.nav-ul {
  margin-top: 2rem;
  display: flex;
  list-style-type: none;
  justify-content: center;
}

.nav-ul li {
  margin-left: 1rem;
}

.nav-ul li a {
  text-decoration: none;
  color: white;
  text-transform: uppercase;
  text-decoration: none;
  color: white;
  text-transform: uppercase;
  font-weight: bold;
}

.nav-ul li a:hover {
  color: aquamarine;
}

/* Navigation ends here */

.Learn {
  padding: 0.5rem 0.5rem;
  background: none;
  border: 1px solid aquamarine;
  color: aquamarine;
  font-size: 1rem;
  opacity: 0.6;
  text-transform: uppercase;
}

.Agency {
  display: flex;
  flex-direction: column;
  text-align: center;
  color: white;
}



h1 {
  margin-top: 7rem;
}

hr {
  width: 5%;
  border: 0.5px solid aquamarine;
  margin: auto;
  padding: auto;
  text-align: center;

  margin: 10rem 5rem 1.5rem 5rem;
}

.hr-Agency {
  border: none;
  height: 1px;
  text-align: center;
  margin: 0 auto;
  min-width: 3rem;
  /* Set the hr color */
  color: aquamarine; /* old IE */
  background-color: aquamarine; /* Modern Browsers */
  opacity: 0.6;
}

.Agency p {
  padding: 3rem;
}


.Agency h1 {
  margin: 7rem 0rem 3rem 0rem;
}

/* header ends here */

/* section about */

.wrapper {
  max-height: 50vh;
  display: flex;
  justify-content: center;
  align-items: center;
}

#learn {
  color: aquamarine;
  background: none;
  padding: 1rem;
  border-radius: 2px;
  text-decoration: none;
  font-weight: bold;
  border: 1px solid aquamarine;
}
.about-upper {
  display: flex;
  margin: 0px auto;
  justify-content: center;
}

.logo-big {
  margin: 5rem;
}
.container {
  margin: 5rem;
}
.about-text {
  padding: 2rem 0rem;
}
.about-under {
  display: flex;
  justify-content: center;
  align-items: center;
  padding: 0rem;
  text-align: center;
  max-height: 50vh;
  background-image: url(images/pngs/bgk-middle.png);
  background-repeat: no-repeat;
  background-size: cover;
}

.about-under p {
  padding: 3rem;
  color: white;
}

.button-learn {
  margin: 4rem;
}

#learn {
  color: aquamarine;
  background: none;
  padding: 1rem;
  border-radius: 2px;
  text-decoration: none;
  font-weight: bold;
  border: 1px solid aquamarine;
}

/* header ends here */

/* section about */

.about-upper {
  height: 60vh;
  display: flex;
  margin: 0px auto;
  justify-content: center;
  align-items: center;
}

.logo-big {
  margin: 2rem;
  /* width: fit-content; */
  height: 25rem;
}
.container {
  margin: 2rem;
}
.about-text {
  padding: 2rem 0rem;
}
.about-under {
  display: flex;
  justify-content: center;
  align-items: center;
  padding: 0rem;
  text-align: center;
  min-height: 60vh;
  background-image: url(images/pngs/bgk-middle.png);
  background-repeat: no-repeat;
  background-size: cover;
}

.about-under p {
  padding: 3rem;
  color: white;
}
/* section about endshere */

/* expertise text part */
.expertise-text {
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
  margin: 1rem;
  padding: 1rem;
}
.expertise-text h2 {
  padding-bottom: 1rem;
}
.expertise p {
  padding: 1rem 0rem;
}
hr {
  width: 5vh;
  background: rgb(199, 196, 196);
  margin: 1rem;
}

.grid-container {
  display: grid;
  min-height: 60vh;
  min-width: 60vh;
  grid-template-columns: repeat(3, 1fr);
  grid-template-rows: repeat(2, 1fr);
}
.grid-item-1 {
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
  padding: 1rem 2rem;
  border-right: thin solid rgb(199, 196, 196);
  border-bottom: thin solid rgb(199, 196, 196);
}
.grid-item-2 {
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
  padding: 1rem 2rem;
  border-right: thin solid rgb(199, 196, 196);
  border-bottom: thin solid rgb(199, 196, 196);
}
.grid-item-3 {
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
  padding: 1rem 2rem;
  border-bottom: thin solid rgb(199, 196, 196);
}
.grid-item-4 {
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
  padding: 1rem 2rem;
  border-right: thin solid rgb(199, 196, 196);
}
.grid-item-5 {
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
  padding: 1rem 2rem;
  border-right: thin solid rgb(199, 196, 196);
}
.grid-item-6 {
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
  padding: 1rem 2rem;
}
.grid-container img {
  margin: 2rem;
  padding: 2rem;
}
.grid-container h2 {
  margin: 0.2rem;
  padding: 0.2rem;
}
.grid-container p {
  margin: 0.2rem;
  padding: 0.2rem;
}
.expertise {
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
  width: 60%;
  margin: auto;
}

/* Expertise ends here */

/* Team section */

.team {
  background: url(./images/bgk-header.png);
  background-size: cover;
  background-repeat: no-repeat;
  min-height: 60vh;
  flex-direction: row;
  justify-content: center;
  color: white;
}

.team-text {
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
  margin: 5rem;
  padding: 1rem;
}

.team-text h2 {
  margin: 2rem;
}

.wrapper-grid-team {
  display: flex;
  justify-content: center;
  align-content: center;
}

.grid-container-team {
  width: 50rem;
  display: grid;
  grid-template-columns: repeat(4, 1fr);
  grid-template-rows: (1, 1fr);
  grid-column-gap: 2rem;
  justify-content: center;
}

.Team-names {
  margin: 2rem 5rem;
  min-width: 10rem;
  text-align: center;
}

.grid-item-team1 {
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
  border: thin solid rgb(199, 196, 196);
}
.grid-item-team2 {
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
  border: thin solid rgb(199, 196, 196);
}
.grid-item-team3 {
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
  border: thin solid rgb(199, 196, 196);
}
.grid-item-team4 {
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
  border: thin solid rgb(199, 196, 196);
}

.Fake-image {
  min-width: 25rem;
  min-height: 25rem;
  background: white;
}

.become-a-part {
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
  margin: 5rem;
  padding: 5rem;
}

.Hiring {
  padding: 0.5rem 0.5rem;
  background: none;
  border: 1px solid aquamarine;
  color: aquamarine;
  font-size: 1rem;
  opacity: 0.6;
  text-transform: uppercase;
  display: flex;
  align-items: center;
  margin: 5rem;
}

/* Team Section ends here */

/* start of section works */
.works {
  display: flex;
  justify-content: space-evenly;
  flex: 1;
  padding: 10rem;
  margin: 10rem;
  align-items: center;
}

.news-form form {
  display: grid;
  justify-content: space-between;
}
.news-form input {
  height: 2rem;
  width: 36.5rem;
  padding: 1rem;
  border: thin solid rgba(212, 212, 212, 0.979);
}
.news-form div {
  margin: 1.5rem 0rem;
}

textarea {
  padding: 1rem;
  border: thin solid rgba(212, 212, 212, 0.979);
}

#sub {
  width: 13rem;
  color: aquamarine;
  background: none;
  padding: 1rem;
  border-radius: 2px;
  text-decoration: none;
  font-weight: bold;
  border: 2px solid aquamarine;
}

.client {
  display: flex;
  justify-content: space-evenly;
  align-items: center;
  padding-left: 5rem;
}
.second h2 {
  padding: 2rem 0;
}
.logos {
  display: grid;
  justify-content: space-around;
  grid-template-columns: 1fr 1fr;
  grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
  gap: 30px 25px;
  grid-template-areas:
    ". ."
    ". ."
    ". ."
    ". ."
    ". .";
}
.zara img {
  width: 15rem;
}
/* end of works section */

/* FOOTER FOOTER FOOTER */
/* start of footer */
.entire-footer {
  background-image: url(./images/bgk-footer.png);
  background-size: cover;
  background-repeat: no-repeat;
  max-height: 40vh;
  min-width: 10vw;
  color: white;
}
.entire-footer {
  display: flex;
  align-items: center;
  flex-direction: column;
  justify-content: space-evenly;
  max-width: 100vw;
}

.footer {
  min-width: 100vh;
  display: flex;
  justify-content: space-around;
  align-items: center;
  min-height: 30vh;
}
/*  divs */
.footer-logo {
  display: flex;
  align-items: center;
  justify-content: center;
}
.footer-logo h2 {
  color: aquamarine;
  margin-left: 2rem;
}
.first-footer-div {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  flex-wrap: wrap;
}
.second-footer-div {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  justify-content: center;
}

.third-footer-div {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  justify-content: center;
}
.third-footer-div ul {
  list-style: none;
  display: flex;
}
.third-footer-div li {
  margin: auto;
  padding: 1.5rem 0.5rem;
}
.footer h2 {
  margin-bottom: 2rem;
}
.first-footer-div img {
  margin-bottom: 2rem;
}

/* adress and phone div */
.adress {
  display: flex;
  justify-content: center;
  align-items: flex-start;
  margin: 0.2rem;
}
.adress img {
  padding-right: 0.2rem;
  margin-right: 1rem;
}
.phone {
  display: flex;
  justify-content: center;
  align-items: flex-start;
  margin: 0.2rem;
}
.phone img {
  padding-right: 0.2rem;
  margin-right: 1rem;
}

.stay-in-touch {
  display: flex;
  align-items: center;
  flex-wrap: wrap;
  justify-content: space-around;
}
.stay-in-touch input {
  background-color: transparent;
  padding: 1rem 1.5rem;
  margin-right: 1rem;
  border: thin solid gray;
}
.paperplain {
  background-color: gray;
  padding: 0.5rem 1.5rem;
}

.copyright {
  min-width: 100vh;
  display: flex;
  align-items: center;
  justify-content: space-around;

  margin-bottom: 6rem;
}

.copyright ul {
  display: flex;
  align-items: center;
  justify-content: center;
  flex: 1;
  list-style: none;
}
.copyright li {
  margin: auto;
  padding: auto;
}
.copyright p {
  display: flex;
  align-items: center;
  justify-content: flex-end;
  flex: 1;
  margin-right: 6rem;
}
/* end of footer */

